2003-04-12  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgobj_object.c (GLib::Object.new!): check if the class has a
	registered type.

	* src/rbgobj_object.c: implement GLib::Object.install_property

	* src/rbgobj_object.c: improve type registeration system.

	* src/rbgobj_paramspecs.c: fix to use appropriate GType.

	* src/rbgobj_type.c, src/rbgobject.h: Add a new function
	rbgobj_register_class() and rewring
	_register_fundamental_klass_to_gtype() and
	_register_fundamental_gtype_to_klass() with it.

2003-04-08  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>
	
	* src/rbgobj_type.c: fix typo. ( interfaced? => interface? )
	
	* src/rbgobj_type.c: implement GLib::Type#<, GLib::Type#>,
	GLib::Type#<= and GLib::Type#>=.

	* src/rbgobj_signal.c: Extend GLib::Instantiatable#signal_handler_block
	to take a block.

	* src/rbgobj_signal.c (gobj_s_signals): Fix memory leak.

	* src/rbgobj_object.c: Use RVAL2GTYPE().

	* src/rbgobj_type.c (interface_get_gtype): Use CLASS2GTYPE().

	* src/rbgobject.c (rbgobj_define_property_accessors): ditto

2003-04-07  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>
	
	* src/rbgobj_signal.c: Implement a new function
	rbgobj_define_action_methods() experimentaly.
	This function defines methods that emit	action signals.

	Action signals are signals that may freely be emitted on alive
	objects from user code via g_signal_emit() and friends, without
	the need of being embedded into extra code that performs pre or
	post emission adjustments on the object. They can also be thought
	of as by third-party code generically callable object methods.

	* src/rbgobj_signal.c: Extend GLib::Object.signals to
	GLib::Object.signals([inherited_too])

	* src/rbgobj_object.c: Extend GLib::Object.properties to
	GLib::Object.properties([inherited_too])

	* src/global.h, src/rbgobj_signal.c, rbgobj_type.c:
	gsub(/mInterfaceCommons/, 'mMetaInterface') and define
	GLib::MetaInterface.

	* src/rbgobj_paramspecs.c (GLib::Param::String#default_value): 